tdf#118684 save correct font height in oox format

Use the correct defaults for font height, underline and
strike-through when saving to DOCX from Writer.

Change-Id: I1bee606e05daf9976488ea5db72af7320e51fc8f
Reviewed-on: https://gerrit.libreoffice.org/64478
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
Tested-by: Tamás Zolnai <tamas.zolnai@collabora.com>